added articles content

--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
-    <div id="popup"> Saturday = Preston Pancakes in the Park! <br> 9:00 a.m. Saturday at the city park pavilion.</div>
     <header>
         <div class="full_header flex clearfix">
             <div class="logo">
@@ -73,19 +72,19 @@
         </section>
         </div>
         <div class="article">
-            <h2>Article Title</h2>
+            <h2>Why is snow white?</h2>
+            <h4>By <a href="weatherwizkids.com">Weather Wiz Kids</a></h4>
             <img class="top" src="images/article2.jpg" alt="two people reading">
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical 
-                Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at 
-                Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a 
-                Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the 
-                undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" 
-                (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, 
-                very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes 
-                from a line in section 1.10.32.
-                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 
-                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original 
-                form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+            <p>Bright snow blinds us with its gleaming white color because it 
+                reflects beams of white light. Instead of absorbing light, snow’s 
+                complex structure prevents the light from shining through its lattice 
+                formation. A beam of white sunlight entering a snow bank is so quickly 
+                scattered by a zillion ice crystals and air pockets that most of the light 
+                comes bouncing right back out of the snow bank. What little sunlight is absorbed 
+                by snow is absorbed equally over the wavelengths of visible light thus giving snow 
+                its white appearance. So while many natural objects get their blue, red, and yellow 
+                colors from absorbing light, 
+                snow is stuck with its white color because it reflects light.</p>
             <img class="bottom" src="images/article2.jpg" alt="two people reading">
         </div>
         <div class="contact_us">
