--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
-    <div id="popup"> Saturday = Preston Pancakes in the Park! <br> 9:00 a.m. Saturday at the city park pavilion.</div>
     <header>
         <div class="full_header flex clearfix">
             <div class="logo">
@@ -52,18 +51,24 @@
        </div>
        <div class="article">
         <h2>March Madness is Coming</h2>
+        <h4>By Adam Augustyn</a></h4>
         <img class="topl" src="images/articlehome.jpg" alt="festival">
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical 
-            Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at 
-            Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a 
-            Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the 
-            undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" 
-            (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, 
-            very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes 
-            from a line in section 1.10.32.
-            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 
-            1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original 
-            form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+        <p>The first men’s tournament was held in 1939, but it was overshadowed for 
+            most of the first two decades of its existence by the National 
+            Invitation Tournament (NIT), which was considered more prestigious 
+            and usually featured the best teams in the country. The NCAA tournament 
+            gradually began to draw the top teams and more television revenue, and, 
+            by the time the University of California, Los Angeles (UCLA), began its 
+            record run of seven consecutive titles in 1967, the tournament was firmly 
+            established as the premier college basketball postseason championship series 
+            in the United States. The size of the tournament field increased incrementally 
+            from 8 teams in 1939 to 64 teams in 1985. A 65th team and corresponding “play-in game” 
+            were added in 2001, when a new conference with an automatically qualifying champion 
+            was created and the NCAA did not want to lower the number of high-profile at-large 
+            schools it could invite to the tournament. In 2011 the NCAA added three additional 
+            opening-round games to the field, bringing the field to 68 teams. The first women’s 
+            tournament was 
+            a 32-team event held in 1982, and it expanded to its current field of 64 in 1994.</p>
         <img class="bottom" src="images/articlehome.jpg" alt="festival">
        </div>
         <div class="contact_us">
