--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -96,19 +96,17 @@
         </section>
         </div>
         <div class="article">
-            <h2>Article Title</h2>
+            <h2>Preston City Covid Update</h2>
+            <h4>By Matthew Felton</h4>
             <img class="top" src="images/article.jpeg" alt="man by building">
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical 
-                Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at 
-                Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a 
-                Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the 
-                undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" 
-                (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, 
-                very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes 
-                from a line in section 1.10.32.
-                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 
-                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original 
-                form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+            <p>Over the last year, everyone's lives have been forced to evolve into something very different than 
+                the typical run of a mill day to day life. With Covid we had to change and work together to protect ourselves 
+                our loved ones , to prevent them from becoming sick with this deadly virus. We now are past a full year of 
+                fighting and working to improve the living contentions back to normal like before. 
+                Vaccines are now can nowe be gotten at local offices. We currently are rquesting the elderly get their vaccines first along 
+                essential workers to help bring safety and peace of mind to those working on the front lines. We are also opening 
+                vaccines next week to manufactoring employees to help bring the economy back up to it's formal glory.
+            </p>
             <img class="bottom" src="images/article.jpeg" alt="man by building">
         </div>
         <div class="contact_us">
