--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/large.css">
 </head>
 <body>
-    <div id="popup"> Saturday = Preston Pancakes in the Park! <br> 9:00 a.m. Saturday at the city park pavilion.</div>
     <header>
         <div class="full_header flex clearfix">
             <div class="logo">
@@ -72,19 +71,23 @@
             </section>
         </div>
         <div class="article">
-            <h2>Article Title</h2>
+            <h2>South Tornado Outbreak</h2>
+            <h4>By Jan Wesner Childs</a></h4>
             <img class="top" src="images/article3.jpg" alt="friends taking a photo">
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical 
-                Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at 
-                Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a 
-                Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the 
-                undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" 
-                (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, 
-                very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes 
-                from a line in section 1.10.32.
-                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 
-                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original 
-                form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+            <p>
+
+                Residents across the South are cleaning up amid harrowing stories 
+                of survival during a tornado outbreak that ripped homes apart, 
+                snapped trees in half and left debris strewn across miles.
+                “You work 24 years and everything you have is gone in the blink of an eye,” 
+                Trent Cox, another resident who lost his home, told the Montgomery Advertiser. 
+                “We have stuff scattered half a mile. There’s people that picked up some of 
+                our pictures two miles away.”
+
+                Cox sorted through the ruins of his property Thursday to try and 
+                salvage what he could. He, his wife, daughter and two grandchildren 
+                ran across the street to take shelter in his father's 
+                basement minutes before their home was wiped away.</p>
             <img class="bottom" src="images/article3.jpg" alt="mfriends taking a photo">
         </div>
         <div class="contact_us">
