--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -73,7 +73,7 @@
         </div>
         <div class="article">
             <h2>Why is snow white?</h2>
-            <h4>By <a href="weatherwizkids.com">Weather Wiz Kids</a></h4>
+            <h4>By Crystal Wicker</h4>
             <img class="top" src="images/article2.jpg" alt="two people reading">
             <p>Bright snow blinds us with its gleaming white color because it 
                 reflects beams of white light. Instead of absorbing light, snow’s 
@@ -85,6 +85,10 @@
                 its white appearance. So while many natural objects get their blue, red, and yellow 
                 colors from absorbing light, 
                 snow is stuck with its white color because it reflects light.</p>
+            <p>Snow is commonly formed when water vapor undergoes deposition, 
+                which is when water vapor changes directly to ice without first 
+                becoming a liquid, high in the atmosphere at a 
+                temperature of less than 32°F and then falls to the ground.</p>
             <img class="bottom" src="images/article2.jpg" alt="two people reading">
         </div>
         <div class="contact_us">
