--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -88,6 +88,18 @@
                 salvage what he could. He, his wife, daughter and two grandchildren 
                 ran across the street to take shelter in his father's 
                 basement minutes before their home was wiped away.</p>
+            <p>Damage was reported in several other Alabama counties, including Choctaw, Chilton, Cherokee and Dallas.
+
+                A shelter in Tuscaloosa filled with people, according to WBRC-TV. 
+                Students also crowded into a shelter at the University of Alabama, 
+                where students were told to stay in a safe place until at least 4:15 CDT.
+                    
+                 A dispatcher in Wayne County, Mississippi, told weather.com 
+                Wednesday afternoon that several homes and chicken houses were 
+                damaged in the county, about 60 miles northeast of Hattiesburg and 
+                near the state line with Alabama . Officials hadn't been able to go out 
+                to the scene because of ongoing severe weather, 
+                so the extent of the damage was unknown.</p>
             <img class="bottom" src="images/article3.jpg" alt="mfriends taking a photo">
         </div>
         <div class="contact_us">
