--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -38,7 +38,7 @@
         </div>
     </nav>
     <main class="maxSize">
-        <h1> Fish Haven Idaho</h1>
+        <h1 id="town-name">Fish Haven Idaho</h1>
         <div class="hero_summary">
             <picture class="hero_img">
                 <source media="(max-width: 500px)" srcset="images/fishhero500x238.jpg">
