--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <main class="maxSize">
-        <h1> Preston Idaho</h1>
+        <h1 id="town-name">Preston Idaho</h1>
         <div class="hero_summary">
             <picture class="hero_img">
                 <source media="(max-width: 500px)" srcset="images/prestonhero500x238.jpg">
