--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -38,7 +38,7 @@
         </div>
     </nav>
     <main class="maxSize">
-        <h1> Soda Springs Idaho</h1>
+        <h1 id="town-name">Soda Springs Idaho</h1>
         <div class="hero_summary">
             <picture class="hero_img">
                 <source media="(max-width: 500px)" srcset="images/sodahero500x238.jpg">
