added event json

--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -71,6 +71,12 @@
             </div>
         </section>
         </div>
+        <section class="upcoming">
+            <h3>Upcoming Events</h3>
+            <div id="event_box">
+
+            </div>
+        </section>
         <div class="article">
             <h2>Why is snow white?</h2>
             <h4>By Crystal Wicker</h4>
@@ -116,5 +122,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/fforecast.js"></script>
+    <script src="js/fevent.js"></script>
 </body>
 </html>
