--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -95,6 +95,12 @@
             </div>-->
         </section>
         </div>
+        <section class="upcoming">
+            <h3>Upcoming Events</h3>
+            <div id="event_box">
+
+            </div>
+        </section>
         <div class="article">
             <h2>Preston City Covid Update</h2>
             <h4>By Matthew Felton</h4>
@@ -134,5 +140,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/pforecast.js"></script>
+    <script src="js/pevent.js"></script>
 </body>
 </html>
