--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -70,6 +70,12 @@
             
             </section>
         </div>
+        <section class="upcoming">
+            <h3>Upcoming Events</h3>
+            <div id="event_box">
+
+            </div>
+        </section>
         <div class="article">
             <h2>South Tornado Outbreak</h2>
             <h4>By Jan Wesner Childs</a></h4>
@@ -127,5 +133,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/sforecast.js"></script>
+    <script src="js/sevent.js"></script>
 </body>
 </html>
