compressed number of js scripts

--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -132,7 +132,6 @@
     <footer><p>&copy; <span id="getYear"></span> | Matthew J. Felton | <span id="currentYear"></span> Weather Data provided by OpenWeatherMap </p></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/scripts.js"></script>
-    <script src="js/sforecast.js"></script>
-    <script src="js/sevent.js"></script>
+    <script src="js/sodascript.js"></script>
 </body>
 </html>
