--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -121,7 +121,6 @@
     <footer><p>&copy; <span id="getYear"></span> | Matthew J. Felton | <span id="currentYear"></span> Weather Data provided by OpenWeatherMap </p></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/scripts.js"></script>
-    <script src="js/fforecast.js"></script>
-    <script src="js/fevent.js"></script>
+    <script src="js/fishscript.js"></script>
 </body>
 </html>
