--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -139,7 +139,6 @@
     <footer><p>&copy; <span id="getYear"></span> | Matthew J. Felton | <span id="currentYear"></span> | Weather Data provided by OpenWeatherMap </p></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/scripts.js"></script>
-    <script src="js/pforecast.js"></script>
-    <script src="js/pevent.js"></script>
+    <script src="js/prestonscript.js"></script>
 </body>
 </html>
