--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -129,7 +129,7 @@
             </div>  
         </div>
     </main>
-    <footer><p>&copy; <span id="getYear"></span> | Matthew J. Felton | <span id="currentYear"></span> Weather Data provided by OpenWeatherMap </p></footer>
+    <footer><p>&copy; <span id="getYear"></span> | Matthew J. Felton | <span id="currentYear"></span> | Weather Data provided by OpenWeatherMap </p></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/scripts.js"></script>
     <script src="js/sodascript.js"></script>
