--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -51,7 +51,7 @@
        </div>
        <div class="article">
         <h2>March Madness is Coming</h2>
-        <h4>By Adam Augustyn</a></h4>
+        <h4>By Adam Augustyn</h4>
         <img class="topl" src="images/articlehome.jpg" alt="festival">
         <p>The first men’s tournament was held in 1939, but it was overshadowed for 
             most of the first two decades of its existence by the National 
