--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -78,7 +78,7 @@
         </section>
         <div class="article">
             <h2>South Tornado Outbreak</h2>
-            <h4>By Jan Wesner Childs</a></h4>
+            <h4>By Jan Wesner Childs</h4>
             <img class="top" src="images/article3.jpg" alt="friends taking a photo">
             <p>
 
