added nav style

--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -29,7 +29,7 @@
         </div>
     </header>
     <nav>
-        <div class="maxSize">
+        <div>
             <ul id="primaryNav" class="disabled">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="#">Athens</a></li>
