--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -40,7 +40,10 @@
         </div>
     </nav>
     <main></main>
-    <footer></footer>
+    <footer>
+        <p>&copy; <span id="getYear"></span> | Matthew J. Felton | <span id="modified"></span> | Weather Data provided by OpenWeatherMap </p>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/allpagescripts.js"></script>
   </body>
 </html>
