added images and footer info

--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -41,7 +41,37 @@
     </nav>
     <main></main>
     <footer>
-        <p>&copy; <span id="getYear"></span> | Matthew J. Felton | <span id="modified"></span> | Weather Data provided by OpenWeatherMap </p>
+        <div class="contact">
+            <h2>Contact Us</h2>
+            <div class="contact_whole">
+                <section class="address">
+                    <h3>Address:</h3>
+                    <p>Limestone Court House<br>
+                    200 W Washington St<br>
+                    Athens, AL 35611</p>
+                </section>
+                <section class="method">
+                    <h3>Phone:</h3>
+                    <p>(256)683-1565</p>
+                    <h3>Email:</h3>
+                    <p>matthewfelton@gmail.com</p>
+                </section>
+        </div>
+        <div class="socialIcons">
+            <a class="social" href="//www.facebook.com/">
+                <img class="social" src="images/facebook.png" alt="facebook icon">
+            </a>
+            <a class="social" href="//www.twitter.com">
+                <img class="social" src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a class="social" href="//www.youtube.com/watch?v=dQw4w9WgXcQ">
+                <img class="social" src="images/youtube.png" alt="youtube icon">
+            </a>
+        </div>
+        <div class="info">
+            <p>Weather Data provided by OpenWeatherMap </p>
+            <p>&copy; <span id="getYear"></span> | <span id="modified"></span></p>
+        </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/allpagescripts.js"></script>
