header footer done

--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -29,13 +29,13 @@
         </div>
     </header>
     <nav>
-        <div>
-            <ul id="primaryNav" class="disabled">
+        <div class="navContainer">
+            <ul id="primaryNav" class="nav disabled">
                 <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="#">Athens</a></li>
-                <li><a href="#">Join Us</a></li>
-                <li><a href="#">Dirctory</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="athens.html">Athens</a></li>
+                <li><a href="join.html">Join Us</a></li>
+                <li><a href="directory,html">Directory</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
@@ -43,18 +43,18 @@
     <footer>
         <div class="footerData">
             <div class="contact">
-                <h3>Contact Us</h2>
-                <div class="contact_whole">
+                <h2>Contact Us</h2>
+                <div class="wholeContact">
                     <section class="address">
-                        <h4>Address:</h3>
+                        <h4>Address:</h4>
                         <p>Limestone Court House<br>
                         200 W Washington St<br>
                         Athens, AL 35611</p>
                     </section>
                     <section class="method">
-                        <h4>Phone:</h3>
+                        <h4>Phone:</h4>
                         <p>(256)683-1565</p>
-                        <h4>Email:</h3>
+                        <h4>Email:</h4>
                         <p>matthewfelton@gmail.com</p>
                     </section>
                 </div>
@@ -73,7 +73,7 @@
             <div class="info">
                 <p>Weather Data provided by OpenWeatherMap </p>
                 <p>&copy; <span id="getYear"></span> | Matthew Felton</p>
-                <p><span id="modified"></span></p>
+                <p class="last"><span id="modified"></span></p>
             </div>
         </div>
     </footer>
