added home hero

--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -39,7 +39,15 @@
             </ul>
         </div>
     </nav>
-    <main></main>
+    <main>
+        <div class="hero">
+            <picture class="heroImg">
+                <source media="(max-width: 500px)" srcset="images/homehero500x238.jpg">
+                <source media="(max-width: 1024px)" srcset="images/homehero704x335.jpg">
+                <img src="images/homehero1024x487.jpg" alt="view of athens courthouse"> 
+            </picture>
+        </div>
+    </main>
     <footer>
         <div class="footerData">
             <div class="contact">
