added purpose and adjucted footer

--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -46,7 +46,18 @@
                 <source media="(max-width: 1024px)" srcset="images/homehero704x335.jpg">
                 <img src="images/homehero1024x487.jpg" alt="view of athens courthouse"> 
             </picture>
+            <section class="purpose">
+                <h3>We are here for you</h3>
+                <p>At Chamber of Unity, we know there is more to a 
+                    community than the bricks and the stones. That why 
+                    we strive to bring light to the people and businesses 
+                    that truly bring the unity to community. While providing 
+                    our local area with ways to reach out to members, join, 
+                    and even find upcoming events nearby.</p>
+                
+            </section>
         </div>
+
     </main>
     <footer>
         <div class="footerData">
