--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -54,7 +54,7 @@
                     that truly bring the unity to community. While providing 
                     our local area with ways to reach out to members, join, 
                     and even find upcoming events nearby.</p>
-                
+                <button type="button" onclick="location.href='join.html';" >Unite with us Today</button>
             </section>
         </div>
 
