--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -57,7 +57,9 @@
                 <button type="button" onclick="location.href='join.html';" >UNITE WITH US TODAY!</button>
             </section>
         </div>
+        <div class="weather">
 
+        </div>
     </main>
     <footer>
         <div class="footerData">
