--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -58,7 +58,21 @@
             </section>
         </div>
         <div class="weather">
-
+            <section class="currentWeather">
+                <div class="labels">
+                    <p>Currently:</p>
+                    <p>Current:</p>
+                    <p>Humidity:</p>
+                </div>
+                <div class="labelsData">
+                    <p><span id="currently"></span></p>
+                    <p><span id="temp"></span>&#176;F</p>
+                    <p><span id="humidity"></span></p>
+                </div>
+            </section>
+            <section class="3dayForcast">
+                
+            </section>
         </div>
     </main>
     <footer>
