added 3 day forcast no css

--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -59,6 +59,7 @@
         </div>
         <div class="weather">
             <section class="currentWeather">
+                <h3>Current Weather</h3>
                 <div class="labels">
                     <p>Currently:</p>
                     <p>Current:</p>
@@ -70,9 +71,10 @@
                     <p><span id="humidity"></span></p>
                 </div>
             </section>
-            <section class="3dayForcast">
+            <div id="weatherforecast" class="3dayForecast">
+                <h3>3-Day Forecast</h3>
                 
-            </section>
+            </div>
         </div>
     </main>
     <footer>
@@ -114,5 +116,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/allpagescripts.js"></script>
+    <script src="js/homescripts.js"></script>
   </body>
 </html>
