--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -71,7 +71,7 @@
                     <p><span id="humidity"></span></p>
                 </div>
             </section>
-            <div id="weatherforecast" class="3dayForecast">
+            <div id="weatherforecast" class="threedayForecast">
                 <h3>3-Day Forecast</h3>
                 
             </div>
