--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -14,6 +14,12 @@
     <link rel="stylesheet" href="css/large.css" />
   </head>
   <body>
+    <div id="close" class="alert">
+        <h1 id="alerttitle"></h1>
+        <p id="weatheralert"></p>
+        <button id="alertClose" class="" onclick="removeAlert()">Close Weather Alert</button>
+        
+    </div>
     <header>
         <div class="fullHeader clearfix">
             
