--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1"
-    />
+      content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
     <title>Home: Chamber of Unity</title>
     <meta name="description" content="home page of the camber of unity" />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -15,8 +14,8 @@
   </head>
   <body>
     <div id="close" class="alert">
-        <h1 id="alerttitle"></h1>
-        <p id="weatheralert"></p>
+        <h1>Alert <span id="alerttitle"></span></h1>
+        <p><span id="weatheralert"></span></p>
         <button id="alertClose" class="" onclick="removeAlert()">Close Weather Alert</button>
         
     </div>
