--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -78,10 +78,17 @@
             </section>
             <div id="weatherforecast" class="threedayForecast">
                 <h3>3-Day Forecast</h3>
-                
             </div>
         </div>
-    
+        <div class="events">
+            <h2>Upcoming Local Events</h2>
+            <p>Apr 9 & 10, 2021 -- Annual Red Carpet Affair Beauty Walk</p>
+            <p>Apr 10, 2021 -- Athens Historic Walking Tours</p>
+            <p>Apr 13, 2021 -- Ask A Master Gardener</p>
+            <p>Apr 15, 2021 -- Annual Athens HS Booster Club Golf Tournament</p>
+            <p>Apr 17, 2021 -- Attention Homes Child Abuse Prevention Event</p>
+            <h3><a href="http://www.visitathensal.com/events.html">For More Upcoming Events click here</a></h3>
+        </div>
     </main>
     <footer>
         <div class="footerData">
