--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -80,6 +80,18 @@
                 <h3>3-Day Forecast</h3>
             </div>
         </div>
+        <div class="advertisement">
+            <h2>Check out these local Businesses</h2>
+            <a class="ads" href="//www.eatatjacks.com/">
+                <img class="ads" src="images/jacksad.jpg" alt="advertisement for Jacks">
+            </a>
+            <a class="ads" href="//www.lawlersbarbecue.com/">
+                <img class="ads" src="images/lawyerad.jpg" alt="advertisement for lawyers">
+            </a>
+            <a class="ads" href="//www.popeyes.com/">
+                <img class="ads" src="images/popeyead.jpg" alt="advertisement for popeyes">
+            </a>
+        </div>
         <div class="events">
             <h2>Upcoming Local Events</h2>
             <p>Apr 9 & 10, 2021 -- Annual Red Carpet Affair Beauty Walk</p>
