--- a/chamberofunity/index.html
+++ b/chamberofunity/index.html
@@ -86,7 +86,7 @@
                 <img class="ads" src="images/jacksad.jpg" alt="advertisement for Jacks">
             </a>
             <a class="ads" href="//www.lawlersbarbecue.com/">
-                <img class="ads" src="images/lawyerad.jpg" alt="advertisement for lawyers">
+                <img class="ads" src="images/lawyerad.jpg" alt="advertisement for lawlers">
             </a>
             <a class="ads" href="//www.popeyes.com/">
                 <img class="ads" src="images/popeyead.jpg" alt="advertisement for popeyes">
