--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li>Lesson 09: <a class="assignments" href="lesson9/prophets.html">Prophets</a> | <a class="assignments" href="lesson11/">Weather Site Home</a> | <a class="assignments" href="lesson9/home-wireframes.html">Home Reference Page</a> </li>
           <li>Lesson 10: <a class="assignments" href="lesson10/api-test.html">API Test</a> | <a class="assignments" href="JSON_start/">Json-Start</a> | <a class="assignments" href="lesson11/preston.html">Preston V3</a></li>
           <li>Lesson 11: <a class="assignments" href="lesson11/">Enlightened Day Weather</a></li>
+          <li>Lesson Final: <a class="assignments" href="chamberofunity/">Chamber of Unity</a></li>
         </ul>
       </nav>
     </main>
