--- a/chamberofunity/athens.html
+++ b/chamberofunity/athens.html
@@ -58,6 +58,7 @@
         </div>
         <div class="athens">
             <h2>Athens Alabama</h2>
+            <img src="images/park.jpg" alt="athen's park" loading="lazy">
             <p>Located in north-central Alabama, 15 miles from the Tennessee border, Athens is the
                 county seat of Limestone County. Since its founding in 1818, one year before Alabama's
                 admittance into the Union, Athens has contributed significantly to shaping the history
